# yuj_temp

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  config.toml  pyproject.toml  yuj
configs/: knobs.toml
docs/: assistant_spec.md  cli_agent_spec.md  config_layering.md  coupling_spec.md  harness_spec.md  knob_catalog.md  model_profiles.md  public_repo_spec.md  sandbox.md  separation_of_concerns.md  state_writer.md
profiles/_base/: profile.toml  tool_schemas.toml
profiles/glm-4-flash/: profile.toml
profiles/qwen3-8b-q4/: profile.toml
profiles/qwen3.5-9b/: profile.toml
profiles/qwen3.5-9b-q6k/: profile.toml
profiles/qwen3.6-35b-a3b/: chat_template_meanderix.jinja  chat_template_mikecoker.jinja  profile.toml
profiles/qwen3.6-35b-a3b-q5/: profile.toml
scripts/: knob.py  yuj.py
scripts/llm_assist/: __init__.py  __main__.py  progress.py  runner.py  store.py
scripts/llm_solver/: __main__.py  (+1 more)
tests/: __init__.py  _config_helpers.py  context.py  edit_replacers.py  guardrails.py  injections.py  loop.py  test_assist_resume.py  test_assist_store.py  test_composability.py  test_compound_context.py  test_compound_selective_context.py  test_concise_contexts.py  test_edit_candidates.py  test_edit_replacers.py  test_harness_and_pipeline.py  test_injections.py  test_loop_detect_guardrail.py  test_parallel_readonly.py  test_post_edit_check.py  test_profile_behavioral_toml.py  test_profile_verify.py  test_read_reminders.py  test_runtime_mode.py  test_sandbox_escape.py  test_savings_ledger.py  test_search_pagination.py  test_sink_pointer_xml.py  test_state_writer.py
(+163 files in other folders)
