[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yuj"
version = "0.1.0"
description = "Terminal-first coding agent shell for the harness runtime."
requires-python = ">=3.10"
dependencies = [
    "openai",
    "requests",
]

[project.scripts]
yuj = "scripts.yuj:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["scripts*"]
